--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -1,4 +1,47 @@
 .header{
  background-color: #fff;
  height: 80px;
+ .header-top{
+  height: 40px;
+  line-height: 40px;
+  border-bottom:1px solid green;
+  text-align: right;
+  padding-right: 30px;
+  span{
+   margin-right: 14px;
+  }
+ }
+ .header-bottom{
+  height: 40px;
+  display: flex;
+  align-items: center;
+  
+  .header-bottom-left{
+   position: relative;
+   width: 25%;
+   text-align: center;
+   font-size: 20px;
+   &::after{
+    content:'';
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
+    top:30px;
+    border-top:20px solid #fff;
+    border-right:20px solid rgba(0,0,0,0);
+    border-bottom:20px solid transparent;
+    border-left:20px solid transparent;
+   }
+  }
+  .header-bottom-right{
+   width: 75%;
+   text-align: right;
+   margin-right: 30px;
+   img{
+    margin: 0 15px;
+    width: 30px;
+    height: 20px;
+   }
+  }
+ }
 }
